# rolo

./: .gitignore  CODEOWNERS  Makefile  README.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  docs-publish.yml
docs/: conf.py  gateway.md  gateway.rst  getting_started.md  handler_chain.md  handler_chain.rst  index.md  index.rst  router.md  router.rst  serving.md  serving.rst  websockets.md  websockets.rst
docs/tutorials/: jsonrpc-server.md  rest-api-sqlmodel.md
examples/json-rpc/: server.py
examples/rest-api-sqlmodel/: README.md  requirements.txt
examples/rest-api-sqlmodel/myapp/: __main__.py  app.py  database.db  resource.py
rolo/: __init__.py  asgi.py  client.py  dispatcher.py  request.py  resource.py  response.py  router.py
rolo/gateway/: __init__.py  asgi.py  chain.py  gateway.py  handlers.py  wsgi.py
rolo/routing/: __init__.py  converter.py  handler.py  openapi.py  pydantic.py  resource.py  router.py  rules.py
rolo/serving/: __init__.py  twisted.py
rolo/testing/: pytest.py
rolo/websocket/: __init__.py  adapter.py  errors.py  request.py  websocket.py
tests/: conftest.py  test_asgi.py  test_client.py  test_dispatcher.py  test_openapi.py  test_proxy.py  test_pydantic.py  test_request.py  test_resource.py  test_response.py  test_router.py
tests/gateway/: conftest.py  test_chain.py  test_context.py  test_handlers.py  test_headers.py  test_websocket.py
tests/serving/: test_twisted.py
tests/static/: index.html
tests/websocket/: test_websockets.py
