[metadata]
name = rolo
version = 0.1.0
url = https://github.com/localstack/rolo
author = LocalStack Contributors
author_email = info@localstack.cloud
description = A lightweight framework for HTTP-based server applications
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:

install_requires =
    requests>=2.20
    werkzeug>=3.0

[options.extras_require]
dev =
    black>=22.1
    isort>=5.10
    pytest>=7.0

[options.packages.find]
exclude =
    tests*

[options.package_data]
* = *.md
