[metadata]
name = rolo
version = 0.2.0.dev
url = https://github.com/localstack/rolo
author = LocalStack Contributors
author_email = info@localstack.cloud
description = A lightweight framework for HTTP-based server applications
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries


[options]
zip_safe = False
packages = find:

install_requires =
    requests>=2.20
    werkzeug>=3.0

[options.extras_require]
dev =
    black>=22.1
    isort>=5.10
    pytest>=7.0
    hypercorn
    pytest_httpserver
    websocket-client>=1.7.0
    coverage[toml]>=5.0.0

[options.packages.find]
exclude =
    tests*

[options.package_data]
* = *.md
